@@ -36,8 +36,6 @@ Created 11/5/1995 Heikki Tuuri
 /* Modes for buf_page_get_gen */
 #define BUF_GET			10	/* get always */
 #define	BUF_GET_IF_IN_POOL	11	/* get if in pool */
-#define	BUF_GET_NOWAIT		12	/* get if can set the latch without
-					waiting */
 #define BUF_GET_NO_LATCH	14	/* get and bufferfix, but set no latch;
 					we have separated this case, because
 					it is error-prone programming not to
@@ -171,12 +169,6 @@ with care. */
 #define buf_page_get_with_no_latch(SP, ZS, OF, MTR)	   buf_page_get_gen(\
 				SP, ZS, OF, RW_NO_LATCH, NULL,\
 				BUF_GET_NO_LATCH, __FILE__, __LINE__, MTR)
-/******************************************************************
-NOTE! The following macros should be used instead of buf_page_get_gen, to
-improve debugging. Only values RW_S_LATCH and RW_X_LATCH are allowed as LA! */
-#define buf_page_get_nowait(SP, ZS, OF, LA, MTR)	buf_page_get_gen(\
-				SP, ZS, OF, LA, NULL,\
-				BUF_GET_NOWAIT, __FILE__, __LINE__, MTR)
 /******************************************************************
 NOTE! The following macros should be used instead of
 buf_page_optimistic_get_func, to improve debugging. Only values RW_S_LATCH and
